@@ -4,7 +4,8 @@ Changelog
 1.1.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Avoid a test dependency on zope.app.testing.
+  [davisagli]
 
 
 1.1.1 (2012-04-15)
